--- a/index.html
+++ b/index.html
@@ -5,14 +5,128 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Ticket</title>
-
+    <!-- font family Raleway-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <!-- font family inter-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <!-- daisy -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+        .ralway-font {
+            font-family: "Raleway", sans-serif;
+        }
+        .inter-font{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 </head>
-    
-<body>
-    <h1 class="text-amber-500">samyaroy</h1>
+
+<body class="ralway-font ">
+    <header class="container mx-auto">
+        <div class="navbar bg-base-100 mt-7">
+            <div class="navbar-start">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                        <li><a>Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Destination</a></li>
+                        <li><a>Search</a></li>
+                    </ul>
+                </div>
+                <a class="font-extrabold text-4xl ">P-Ticket</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal px-1">
+                    <li><a>Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Destination</a></li>
+                    <li><a>Search</a></li>
+                </ul>
+            </div>
+            <div class="navbar-end">
+                <a class="btn font-bold text-xl text-[#1DD100]">Bus
+
+                    <img src="./images/bus-icon.png" alt="" srcset="">
+                </a>
+            </div>
+        </div>
+
+        <!-- banner section -->
+        <section class="container mx-auto">
+            <div class="hero h-[550px] "
+                style="background-image: url(./images/banner.png);background-size: contain;background-repeat: no-repeat;">
+                <div class="flex h-full items-center justify-center ">
+                    <div class="text-white text-center">
+                        <h2 class="mb-4 text-4xl  text-[64px] font-extrabold ">End-to-End Travel with</h2>
+                        <h2 class="mb-4 text-4xl text-[64px] font-extrabold pt-12 pb-12 text-[#1dd100]">P Paribahan</h2>
+                        <p>Yes, you can run unit tests and view the results directly within the app. <br> The integrated
+                            testing features allow for a streamlined .</p>
+
+                        <button class="btn btn-active bg-[#1dd100] border-none mt-7">Buy Tickets</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
+    <main>
+        <!-- copun offer section -->
+        <section class="">
+            <h3 class="text-4xl font-bold text-center mt-14 mb-10">Best offers for you</h3>
+            <div class="flex flex-col lg:flex-row gap-5 justify-center">
+                <div class="flex justify-center items-center bg-[#FFBF0F] px-12 rounded-3xl">
+                    <div class="mr-ml-8">
+                        <h5 class="font-black text-[40px] inter-font">15% OFF</h5>
+                        <h6 class="inter-font font-semibold text-[18px] mt-2 mb-1.5">on your next purchase</h6>
+                        <p class="inter-font text-[18] font-medium">use by January 2024</p>
+                    </div>
+                    <img src="./images/cupon-devider.png" alt="">
+                    <div  class="ml-8">
+                        <h3 class="font-bold text-[32px]">NEW15</h3>
+                        <p class="font-medium text-[20px]">Coupon Code</p>
+                    </div>
+                </div>
+                <div class="flex justify-center items-center bg-[#F78C9C] px-12 rounded-3xl">
+                    <div class="mr-ml-8">
+                        <h5 class="font-black text-[40px] inter-font">20% OFF</h5>
+                        <h6 class="inter-font font-semibold text-[18px] mt-2 mb-1.5">on your next purchase</h6>
+                        <p class="inter-font text-[18] font-medium">use by January 2024</p>
+                    </div>
+                    <img src="./images/cupon-devider.png" alt="">
+                    <div  class="ml-8">
+                        <h3 class="font-bold text-[27px]">Couple 20</h3>
+                        <p class="font-medium text-[20px]">Coupon Code</p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-20">
+                <button class="btn btn-outline btn-success"> See All Offers</button>
+            </div>
+        </section>
+        <!-- pribohon ditailse -->
+        <section class="border rounded-full mt-20 border-t-[#1dd100]">
+            <div>
+                <h3 class="text-4xl font-bold text-center mt-20 mb-10">P.H Paribahan</h3>
+
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
