--- a/index.html
+++ b/index.html
@@ -121,63 +121,65 @@
             </div>
         </section>
         <!-- pribohon ditailse -->
-        <!-- border container mx-auto bg-[#F7F8F8] rounded-full mt-20 border-t-[#1dd100] -->
-        <section  class="container mx-auto ">
-            <div class="">
-                <h3 class="text-4xl font-bold text-center mt-20 mb-10">P.H Paribahan</h3>
-                <p class="text-center font-normal text-[18px] inter-font">Yes, you can run unit tests and view the
-                    results directly within the app. <br> The integrated testing features allow for a streamlined .</p>
-            </div>
-            <div class="mt-24 grid grid-cols-12 items-center">
-                <div class="col-span-9 m-8">
-                    <div class="flex justify-between items-center">
-                        <div class="flex items-center">
-                            <div>
+       <div class="border bg-[#F7F8F8] rounded-2xl mt-20 border-t-[#1dd100]">
 
-                                <img src="./images/bus-logo.png" alt="">
-                            </div>
-                            <div class="m-4" id="BuyTickets">
-                                <h3 class="font-bold text-[32px]">Greenline Paribahan</h3>
-                                <p>Coach-009-WEB ! AC_Business</p>
-                            </div>
-                        </div>
-                        <div class="">
-                            <a class="btn font-bold text-xl inter-font text-[#1DD100]">
-                                <img src="./images/seat-green.png" alt="" srcset="">
-                                <span> <span id="available-set">8</span> Seats left</span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="bg-[#F7F8F8]">
-                        <div class="flex justify-between bg-[#F7F8F8] p-8">
-                            <h5 class="text-xl font-semibold">Route</h5>
-                            <p class="text-xl font-bold">Dhaka - Sylhet</p>
-                        </div>
-                        <div class="border border-gray-300 border-dashed"></div>
-                        <div class="flex justify-between bg-[#F7F8F8]  p-8">
-                            <h5 class="text-xl font-semibold">Departure Time</h5>
-                            <p class="text-xl font-bold">9:00 PM</p>
-                        </div>
-                        <div class="border border-gray-300 border-dashed"></div>
-                        <div class="flex justify-between p-8">
-                            <button class="btn">Boarding Point - Laxmipur</button>
-                            <button class="btn">Dropping Point - Bogura</button>
-                            <button class="btn">Est. Time - 11 Hour</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="text-center w-[300px] flex items-center">
-                    <div>
-                        <img src="./images/info-devider.png" alt="">
-                    </div>
-                    <div>
-                        <img src="./images/fare.png" class="mx-auto mb-3" alt="">
-                        <h3 class="font-bold text-[32px]">550 Taka</h3>
-                        <p class="font-semibold text-xl">Per Seat</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+           <section  class="container mx-auto ">
+               <div class="">
+                   <h3 class="text-4xl font-bold text-center mt-20 mb-10">P.H Paribahan</h3>
+                   <p class="text-center font-normal text-[18px] inter-font">Yes, you can run unit tests and view the
+                       results directly within the app. <br> The integrated testing features allow for a streamlined .</p>
+               </div>
+               <div class="mt-24 grid grid-cols-12 items-center">
+                   <div class="col-span-9 m-8">
+                       <div class="flex justify-between items-center">
+                           <div class="flex items-center">
+                               <div>
+   
+                                   <img src="./images/bus-logo.png" alt="">
+                               </div>
+                               <div class="m-4" id="BuyTickets">
+                                   <h3 class="font-bold text-[32px]">Greenline Paribahan</h3>
+                                   <p>Coach-009-WEB ! AC_Business</p>
+                               </div>
+                           </div>
+                           <div class="">
+                               <a class="btn font-bold text-xl inter-font text-[#1DD100]">
+                                   <img src="./images/seat-green.png" alt="" srcset="">
+                                   <span> <span id="available-set">8</span> Seats left</span>
+                               </a>
+                           </div>
+                       </div>
+                       <div class="bg-[#F7F8F8]">
+                           <div class="flex justify-between bg-[#F7F8F8] p-8">
+                               <h5 class="text-xl font-semibold">Route</h5>
+                               <p class="text-xl font-bold">Dhaka - Sylhet</p>
+                           </div>
+                           <div class="border border-gray-300 border-dashed"></div>
+                           <div class="flex justify-between bg-[#F7F8F8]  p-8">
+                               <h5 class="text-xl font-semibold">Departure Time</h5>
+                               <p class="text-xl font-bold">9:00 PM</p>
+                           </div>
+                           <div class="border border-gray-300 border-dashed"></div>
+                           <div class="flex justify-between p-8">
+                               <button class="btn">Boarding Point - Laxmipur</button>
+                               <button class="btn">Dropping Point - Bogura</button>
+                               <button class="btn">Est. Time - 11 Hour</button>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="text-center w-[300px] flex items-center">
+                       <div>
+                           <img src="./images/info-devider.png" alt="">
+                       </div>
+                       <div>
+                           <img src="./images/fare.png" class="mx-auto mb-3" alt="">
+                           <h3 class="font-bold text-[32px]">550 Taka</h3>
+                           <p class="font-semibold text-xl">Per Seat</p>
+                       </div>
+                   </div>
+               </div>
+           </section>
+       </div>
 
         <section class="bg-[#F7F8F8] inter-font" id="hiddenInput">
             <div class="container mx-auto ">
